--- a/weather2-app/package.json
+++ b/weather2-app/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "cra-template": "1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "weather-icons": "github:erikflowers/weather-icons"
   },
   "scripts": {
     "start": "react-scripts start",
